--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.27.1",
     "axios": "^1.1.2",
+    "html-react-parser": "^3.0.4",
     "leaflet": "^1.8.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-contenteditable": "^3.3.6",
     "react-dom": "^17.0.2",
     "react-leaflet": "^4.0.1",
     "react-redux": "^7.2.4",
